--- a/pets.html
+++ b/pets.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Pets</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <header>
@@ -15,6 +16,17 @@
     </header>
     <main>
         <h2>Our Pet Collection</h2>
+        <div style="display: flex; gap: 24px; justify-content: center; margin-bottom: 20px;">
+            Type:
+            <div style="display: flex; gap: 15px;">
+                <div><input type="checkbox" id="type-dogs" name="pet-type" value="Dog" checked/> Dogs</div>
+                <div><input type="checkbox" id="type-cats" name="pet-type" value="Cat" checked/> Cats</div>
+                <div><input type="checkbox" id="type-capybaras" name="pet-type" value="Capybara" checked/> Capybaras</div>
+                <div><input type="checkbox" id="type-birds" name="pet-type" value="Bird" checked/> Birds</div>
+                <div><input type="checkbox" id="type-hamsters" name="pet-type" value="Hamster" checked/> Hamsters</div>
+                <div><input type="checkbox" id="type-fish" name="pet-type" value="Fish" checked/> Fish</div>
+            </div>
+        </div>
         <div class="pet-list" id="pet-list">
             </div>
     </main>
